# instabot

./: .env  .gitignore  README.md  pyproject.toml  rotbot.py
bot/: __init__.py  __main__.py
bot/extensions/: dmcheck.py  dmhaul.py  init.py  ping.py  test.py
bot/links/: __init__.py
bot/links/sites/: instagram.py
bot/utils/: compression.py  handle_instagram.py
